# TypeClasses

./: README.md  TypeClasses.cabal  stack.yaml
src/: BigDecimal.hs  ConcreteQ.hs  Stack.hs
