name:                TypeClasses
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/thma/TypeClasses#readme
license:             APACHE2
license-file:        LICENSE
author:              Thomas Mahler
maintainer:          thma@apache.org
copyright:           2017 Thomas Mahler
category:            OOP
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Stack, ConcreteQ
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/thma/TypeClasses
